error-reporting: bind gunicorn to all interfaces

--- a/error-reporting/Dockerfile
+++ b/error-reporting/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.12-slim-bookworm
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-EXPOSE 3000
+EXPOSE 8000
 
 WORKDIR /app
 
@@ -13,4 +13,4 @@ ENV PATH="/app/.venv/bin:$PATH"
 
 # Reset the entrypoint, don't invoke `uv`
 ENTRYPOINT []
-CMD ["gunicorn", "main:app", "--timeout", "2"]
+CMD ["gunicorn", "main:app", "--timeout", "2", "--bind", "0.0.0.0"]
